<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".ui.DashBoard.DashBoardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/gray"
        android:layout_marginTop="10dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_person"
                android:contentDescription="@string/profile" />

            <ImageView
                android:id="@+id/icEditProfile"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_add_profile"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/edit_profile_pic"
                app:tint="@color/ok" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ok"
                android:text="@string/hello_user"
                android:layout_marginTop="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ok"
                android:text="@string/welcome_to_quiz_app"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="30dp"
            app:tint="@color/ok"
            android:src="@drawable/logout"/>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAdd"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/gray"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:tint="@color/ok"
                android:src="@drawable/ic_quiz" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Quiz"
                android:textSize="10dp"
                android:textColor="@color/ok"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="30dp"/>
        </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvQuiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp" />

</LinearLayout>